manifests/livekit-jwt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "livekit-jwt.chat.la-suite.apps.digilab.network"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  number: 8080
  tls:
    - hosts:
        - livekit-jwt.chat.la-suite.apps.digilab.network
      secretName: element-livekit-jwt-tls
